click for next image in about & custom text for project video buttons

--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
     <!-- About -->
     <div id="about" class="page">
       <div class="aboutTextBox appear">
-        <div class="hc" style="align-items: center; gap: 20px;">
+        <div>
           <div class="pageTit">
             <span>01.&nbsp;</span>
             <span id="aboutTit">About Me</span>
           </div>
           <div style="height: 1px; flex-grow: 1; background: var(--text);"></div>
         </div>
-        <span style="text-align: justify;">
+        <span>
           <span id="aboutDesc1">Howdy! My name is Alejandro, but you call me Panco or Alex. I'm a spanish web and android developer who loves making user-friendly and responsive web interfaces along with multiplatform apps of all kinds.</span>
           <br><br>
           <span id="aboutDesc2">I'm an independant well-organised person who finds problem-solving an easy task and loves giving things his own touch. Some of my interests are making apps and games, but I also enjoy 3D printing and DIY projects.</span>
@@ -202,8 +202,9 @@
       </div>
 
       <div class="aboutImgBox appear">
-        <div id="aboutImgName" class="aboutImgName">Image Name</div>
-        <img id="aboutImg" class="aboutImg" onclick="abClick()">
+        <img id="aboutImg" onclick="abClick()">
+        <div id="aboutImgName">Image Name</div>
+        <div id="aboutImgNext">Click for next image</div>
       </div>
     </div>
 
