changed how projects work, fixed a bug & more
- right navigation balls (desktop only) can now be pressed
- fixed project media hover animation not triggering because info div or buttons div were on top even if they were invisible
- updated spyw4re project to show it ended second place
- updated fresquita project video button text to be the same as escape from lmdshow
- some non game projects now also appear in projects (assistants and framework)
- renamed project inf key to skills & moved it to projs instead of lan
- changed how skills are shown in projects to appear as chips
- added year to projects (shown as a chip with accent border in its skills)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" mobile>
+<html lang="en">
   <head>
     <!-- Main -->
     <meta charset="utf-8">
@@ -144,10 +144,10 @@
 
       <!-- Balls -->
       <div class="balls">
-        <div id="ball1" class="ball" checked></div>
-        <div id="ball2" class="ball"></div>
-        <div id="ball3" class="ball"></div>
-        <div id="ball4" class="ball"></div>
+        <div id="ball1" class="ball" onclick="goto('home')" checked></div>
+        <div id="ball2" class="ball" onclick="goto('about')"></div>
+        <div id="ball3" class="ball" onclick="goto('skills')"></div>
+        <div id="ball4" class="ball" onclick="goto('projects')"></div>
       </div>
 
       <!-- Snackbar -->
@@ -309,8 +309,9 @@
 
       <div id="prProjects"  class="vc" style="margin-top: 50px; gap: calc(5 * var(--pageGap));"></div>
 
-      <div id="prMoreBox" class="vc cc" style="margin-top: 50px;">
-        <div id="prMore" class="pageBtn" onclick="addProject(); addProject();">Load More</div>
+      <div id="prMoreBox" class="prMoreBox">
+        <div id="prMore" class="pageBtn" onclick="addProject(); addProject();">Show more</div>
+        <!--div id="prAll" class="pageBtn" onclick="addProject(); addProject();">Show all</div-->
       </div>
     </div>
 
