added a filter option for skills in projects & updated android assistant apk

--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
       </div>
 
       <!-- List -->
+      <span id="projectsFilterBox">
+        <span id="projectsFilterStart">Filtering projects containing:</span>
+        <span id="projectsFilterSkill" class="projectSkill" onclick="addProjects()">Bomba</span>
+        <span id="projectsFilterEnd">(click to remove)</span>
+      </span>
       <div id="projectsList"></div>
 
       <!-- Show more -->
