extended about me description

--- a/index.html
+++ b/index.html
@@ -221,9 +221,11 @@
 
         <!-- Description -->
         <span>
-          <span id="aboutDescription1">Howdy! My name is Alejandro, but you call me Panco or Alex. I'm a spanish web and android developer who loves making user-friendly and responsive web interfaces along with multiplatform apps of all kinds.</span>
+          <span id="aboutDescription1">Howdy! My name is Alejandro, but you call me Alex. I'm a spanish developer who likes spending time creating games and apps.</span>
           <br><br>
-          <span id="aboutDescription2">I'm an independant well-organised person who finds problem-solving an easy task and loves giving things his own touch. Some of my interests are making apps and games, but I also enjoy 3D printing and DIY projects.</span>
+          <span id="aboutDescription2">I started making games in 2015 at the age of 11, took a break to learn web and app development in 2019 and returned to doing all of them in 2022.</span>
+          <br><br>
+          <span id="aboutDescription3">I'm a well-organized, independent person who loves giving things his own touch. Some of my interests are playing, programming and designing, but I also enjoy 3D printing and DIY projects.</span>
         </span>
 
         <!-- Go to skills -->
