added linkedin contact

--- a/index.html
+++ b/index.html
@@ -131,19 +131,22 @@
         <a class="socialsButton" onclick="copyMail()">
           <img src="Data/Images/Icons/email.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://www.linkedin.com/in/alejandro-paniagua-moreno" onclick="socialsOpen=true">
+          <img src="Data/Images/Icons/linkedin.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/git.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/itchio.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/reddit.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/yt.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/tiktok.png">
         </a>
       </div>
@@ -377,19 +380,22 @@
         <a class="socialsButton" onclick="copyMail()">
           <img src="Data/Images/Icons/email.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://www.linkedin.com/in/alejandro-paniagua-moreno" onclick="socialsOpen=true">
+          <img src="Data/Images/Icons/linkedin.png">
+        </a>
+        <a class="socialsButton" target="_blank" href="https://github.com/BOTPanzer/" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/git.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://botpa.itch.io/" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/itchio.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://www.reddit.com/user/Botpa69" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/reddit.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://www.youtube.com/@botpa" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/yt.png">
         </a>
-        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="socialsOpen = true">
+        <a class="socialsButton" target="_blank" href="https://www.tiktok.com/@botpanzer" onclick="socialsOpen=true">
           <img src="Data/Images/Icons/tiktok.png">
         </a>
       </div>
