added google analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <!-- CSS & JS -->
     <link rel="stylesheet" href="Data/CSS/main.css"></link>
     <script src="Data/JS/confetti.browser.min.js"></script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1D9J918FEK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-1D9J918FEK');
+    </script>
   </head>
   
 
